--- a/css/main.css
+++ b/css/main.css
@@ -7,18 +7,33 @@ html {
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 3rem;
 }
 
-p {
-  font-family: 'Roboto Condensed', sans-serif;
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 1.5rem;
 }
 
 .btn-big {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 1.5rem;
+}
+.btn {
+  display: inline-block;
+  border-style: solid;
+  color: #fff;
+  background-color: #333;
+  border-color: #333;
+  font-size: 1.125rem;
+  padding: .4em .75em .3em;
+  border-width: 3px;
+  border-radius: 8px;
+}
+
+.btn:hover {
+  background-color: black;
 }
 
 .banner {
@@ -34,6 +49,7 @@ p {
 
 .banner-content {
   position: absolute;
+  float: right;
   width: 100%;
   margin: 0;
   padding-left: 1rem;
@@ -41,4 +57,9 @@ p {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.circle {
+  float: left;
+  position: absolute;
 }
