--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,18 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  overflow: hidden;
+}
+
 h1 {
   font-family: Roboto, sans-serif;
   font-size: 3rem;
 }
 
-h2 {
+p {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.5rem;
 }
@@ -20,6 +26,7 @@ h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.5rem;
 }
+
 .btn {
   display: inline-block;
   border-style: solid;
@@ -30,6 +37,7 @@ h2 {
   padding: .4em .75em .3em;
   border-width: 3px;
   border-radius: 8px;
+  float: right;
 }
 
 .btn:hover {
@@ -45,21 +53,24 @@ h2 {
 .img-flex {
   display: block;
   width: 100%;
+  position: relative;
 }
 
 .banner-content {
   position: absolute;
-  float: right;
   width: 100%;
   margin: 0;
-  padding-left: 1rem;
+  padding-left: 5rem;
   padding-right: 1rem;
   bottom: 0;
-  left: 50%;
+  left: 80%;
   transform: translateX(-50%);
 }
 
 .circle {
+  display: block;
   float: left;
-  position: absolute;
+  margin: 0;
+  top: 0;
+  width: 50%;
 }
